Changed Table 1 so that Ho for partial microsatellite dataset is significant.

--- a/rnw/Elbers_et_al_2016_review3.tex
+++ b/rnw/Elbers_et_al_2016_review3.tex
@@ -230,7 +230,7 @@ Variable & SNP dataset & Full Microsatellite Dataset & Partial Microsatellite Da
 Correlation with SNPs &        & not significant & not significant \\
 \hline
 \textsc{Ho}           & 0.267  & 0.495           & 0.469           \\
-Correlation with SNPs &        & significant     & not significant \\
+Correlation with SNPs &        & significant     & significant     \\
 \hline
 \textsc{He}           & 0.228  & 0.543    & 0.531                  \\
 Correlation with SNPs &        & significant     & significant     \\
