Fixed Table 1 again, it is correct now. For partial microsat dataset AR should be sig and Ho should be not sig.

--- a/rnw/Elbers_et_al_2016_review3.tex
+++ b/rnw/Elbers_et_al_2016_review3.tex
@@ -227,10 +227,10 @@ Additional Supporting Information may be found in the online version of this art
 Variable & SNP dataset & Full Microsatellite Dataset & Partial Microsatellite Dataset \\ 
 \hline
 \textsc{Ar}           & 1.541  & 5.487           & 2.900           \\
-Correlation with SNPs &        & not significant & not significant \\
+Correlation with SNPs &        & not significant & significant     \\
 \hline
 \textsc{Ho}           & 0.267  & 0.495           & 0.469           \\
-Correlation with SNPs &        & significant     & significant     \\
+Correlation with SNPs &        & significant     & not significant \\
 \hline
 \textsc{He}           & 0.228  & 0.543    & 0.531                  \\
 Correlation with SNPs &        & significant     & significant     \\
