--- a/rnw/Elbers_et_al_2016_review3.Rnw
+++ b/rnw/Elbers_et_al_2016_review3.Rnw
@@ -416,10 +416,10 @@ pmsats.fst.mean <- mean(pmsats.fst$FST)
 Variable & SNP dataset & Full Microsatellite Dataset & Partial Microsatellite Dataset \\ 
 \hline
 \textsc{Ar}           & 1.541  & 5.487           & 2.900           \\
-Correlation with SNPs &        & not significant & not significant \\
+Correlation with SNPs &        & not significant & significant     \\
 \hline
 \textsc{Ho}           & 0.267  & 0.495           & 0.469           \\
-Correlation with SNPs &        & significant     & significant     \\
+Correlation with SNPs &        & significant     & not significant \\
 \hline
 \textsc{He}           & 0.228  & 0.543    & 0.531                  \\
 Correlation with SNPs &        & significant     & significant     \\
